<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="left"
	android:background="@drawable/gray">
	<TextView android:id="@+id/testdata" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:paddingTop="15dp"
		android:layout_gravity="center_horizontal" android:textColor="@drawable/white_text"
		android:paddingLeft="20dp" android:paddingRight="20dp"
		android:layout_marginTop="30dp" android:textSize="20sp"
		android:text="@string/aro_tracecompleted"></TextView>

	<LinearLayout android:orientation="horizontal"
		android:gravity="left" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_marginTop="50dp">
		<TextView android:id="@+id/tracepathlb"
			android:layout_gravity="left" android:layout_height="wrap_content"
			android:layout_width="60dp" android:textSize="18sp"
			android:textColor="@drawable/white_text" android:textStyle="bold"
			android:layout_marginRight="40dp" android:layout_marginLeft="15dp"
			android:text="@string/aro_tracepath"></TextView>
		<TextView android:id="@+id/tracepath" android:layout_gravity="left"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:textSize="16sp" android:text=""></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:gravity="left" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_marginTop="10dp">
		<TextView android:id="@+id/tracedatalb"
			android:layout_gravity="left" android:layout_height="wrap_content"
			android:textColor="@drawable/white_text" android:layout_width="60dp"
			android:textSize="18sp" android:textStyle="bold"
			android:layout_marginRight="40dp" android:layout_marginLeft="15dp"
			android:text="@string/aro_tracedata"></TextView>
		<TextView android:id="@+id/tracedata" android:layout_gravity="left"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:textSize="16sp" android:text="@string/aro_yestext"></TextView>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:gravity="left" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_marginTop="10dp">
		<TextView android:id="@+id/tracevideolb"
			android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:textColor="@drawable/white_text" android:layout_width="60dp"
			android:textSize="17sp" android:textStyle="bold"
			android:layout_marginRight="40dp" android:layout_marginLeft="15dp"
			android:text="@string/aro_tracevideo"></TextView>
		<TextView android:id="@+id/tracevideo"
			android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:textSize="16sp"
			android:text="@string/aro_notext"></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:gravity="left" android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:layout_marginTop="10dp">
		<TextView android:id="@+id/tracedurationlb" android:textSize="17sp"
			android:textColor="@drawable/white_text" android:text="@string/aro_traceduration"
			android:layout_height="wrap_content" android:layout_width="85dp"
			android:layout_marginRight="15dp" android:layout_marginLeft="15dp"
			android:textStyle="bold" android:layout_gravity="left"></TextView>
		<TextView android:id="@+id/traceduration"
			android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:textSize="16sp"
			android:text="00:00:00:00"></TextView>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="40dp" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="center"
		android:layout_gravity="center_vertical">
		<Button android:id="@+id/datasummaryok" android:layout_width="120dp"
			style="@style/BlueButton" android:layout_height="45dp" android:text="@string/aro_oktext"
			android:gravity="center" android:layout_gravity="center_horizontal" 
			 android:textSize="18sp">
		</Button>
	</LinearLayout>
</LinearLayout>
