<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:layout_gravity="center" android:background="@drawable/dialog_border"
	android:orientation="vertical">
	<LinearLayout android:id="@+id/dialog"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center" android:orientation="vertical">
		<TextView android:id="@+id/dialog_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="10dp" android:textSize="18sp" android:gravity="center"
			android:textColor="@drawable/white_text" android:background="@drawable/att_blue_headercolor"
			android:text="@string/aro_error">
		</TextView>
		<ScrollView android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical">
				<TextView android:id="@+id/aro_error_message_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:gravity="center_horizontal" android:padding="3dp"
					android:textSize="15sp" android:textColor="@drawable/black"
					android:text="@string/aro_failedstart">
				</TextView>
				<LinearLayout android:id="@+id/dialog_button_set"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_gravity="center" android:weightSum="2"
					android:gravity="center" android:orientation="horizontal">
					<Button android:id="@+id/dialog_button_ok"
						android:layout_width="wrap_content" android:layout_height="40dp"
						android:textSize="14sp" android:layout_weight="1"
						android:background="@drawable/button_selector" android:gravity="center"
						android:textColor="@drawable/white_text" android:text="@string/aro_oktext">
					</Button>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</RelativeLayout>