<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_border"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/att_blue_headercolor"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@drawable/white_text"
            android:textSize="18sp" >
        </TextView>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dialog_hotspotname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/aro_createfolder"
                    android:textColor="@drawable/black"
                    android:textSize="15sp" >
                </TextView>

                <EditText
                    android:id="@+id/dialog_tracefoldername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Folder Name"
                    android:maxLength="50"
                    android:textColor="@drawable/black"
                    android:textSize="14sp" >
                </EditText>

                <LinearLayout
                    android:id="@+id/dialog_button_set"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <Button
                        android:id="@+id/dialog_button_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:gravity="center"
                        android:text="@string/aro_oktext"
                        android:textColor="@drawable/white_text"
                        android:textSize="14sp" >
                    </Button>

                    <Button
                        android:id="@+id/dialog_button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:gravity="center"
                        android:text="@string/aro_cnltext"
                        android:textColor="@drawable/white_text"
                        android:textSize="14sp" >
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>